# androidcodes

./: ProjectHome.md  README.md
BrowserShell/app/: build.gradle
BrowserShell/app/src/main/: AndroidManifest.xml
MultiTimer/jni/: Android.mk  JavaShareClient.cpp  JavaShareClient.h  TimerClient.h  timer_jni.cpp  timer_jni.h
RichBrowser/: .project
RichBrowser/jni/: Android.mk  BrowserJniOnLoad.cpp
RichBrowser/jni/webcore/: WebCoreJni.h
RichBrowser/res/values/: strings.xml
autoboot/: AndroidManifest.xml
citysettings/: .project  AndroidManifest.xml
citysettings/res/values/: strings.xml
citysettings/res/xml/: preference_app_settings.xml  preference_default_city_settings.xml
cmaketest/: AndroidManifest.xml  android-build-env
cmaketest/jni/: TestJni.cpp
cmaketest/script/: android-build-env  android.cmake
cmaketest/src/MathFunctions/: MathFunctions.h  mysqrt.cxx
curltest/android/: Android.mk.in  Android.mk.master.in  AndroidManifest.xml.in  Application.mk.in  android-curltest.mk.in
curltest/android/android-cmake/: CMakeLists.txt
curltest/modules/: CMakeLists.txt
curltest/third/curl/: CMakeLists.txt
httpcurl/: .project  AndroidManifest.xml
httpcurl/jni/: Android.mk  ResourceHandle.h  ResourceHandleManager.cpp  dlist.c  fopen.c  fopen.h  httpcurl.cpp  lib504.c  lib504.h  lib507.c  test.c  testutil.h
httpcurl/res/layout/: main.xml
httpcurl/third/: curl.mk
myviewtest/res/values/: strings.xml
ndk-asset/: AndroidManifest.xml
networktest/: .project  AndroidManifest.xml
networktest/jni/: NetworkTestJni.h  mylog.h
proandroid4/ch21/SampleFrameAnimation/app/: build.gradle  proguard-rules.pro
skiademo/: .project  AndroidManifest.xml
skiademo/jni/: SkiaDemoJni.cpp  SkiaDemoJni.h
toolbar/: AndroidManifest.xml
toolbar/res/layout/: navigator.xml
toolbar/res/values/: attrs.xml
trunk/: log.txt
trunk/MultiTimer/: .project  AndroidManifest.xml
trunk/MultiTimer/jni/: JavaBridge.cpp  timer.c  timer.cpp  timer.h  timer_jni.cpp
trunk/MultiTimer/res/values/: strings.xml
trunk/RichBrowser/: AndroidManifest.xml
trunk/RichBrowser/jni/: Android.mk  BrowserJniOnLoad.cpp  WebFrame.cpp  WebFrame.h
trunk/autoboot/: .project
trunk/citysettings/: AndroidManifest.xml
trunk/cmaketest/: .project
trunk/cmaketest/jni/: CMakeLists.txt  TestJni.cpp  TestJni.h  mylog.h
trunk/cmaketest/script/: android-build-env  android.cmake  gcc-android
trunk/cmaketest/src/: CMakeLists.txt  tutorial.cxx
trunk/curltest/android/: AndroidCVModule.cmake  CMakeLists.txt  curl_config_android.h.in
trunk/curltest/third/: CMakeLists.txt
trunk/httpcurl/: AndroidManifest.xml
trunk/httpcurl/jni/: Android.mk  ResourceHandleManager.h  dlist.h  httpcurl.cpp  httpcurl.h  lib507.h  test.mk  testutil.c
trunk/httpcurl/third/: myconfig.sh
trunk/myviewtest/: .project  AndroidManifest.xml
trunk/ndk-asset/: .project
trunk/networktest/jni/: Android.mk  NetworkTestJni.cpp
trunk/skiademo/: AndroidManifest.xml
trunk/skiademo/jni/: Android.mk  SkiaDemoJni.cpp  SkiaDemoJni.h
trunk/toolbar/: .project
(+54 files in other folders)
